<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="ru.jaguardesign.testnav.Package.Feat">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/feat_t"
            android:id="@+id/textView26"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            > </SearchView>>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/feat_g"
                android:id="@+id/textView22"
                android:textColor="@color/colorTitle"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_margin="5dp"

                android:textAlignment="viewEnd"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText22"
                android:text="1"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <Button
            android:background="@drawable/mybutton"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feat_c"
            android:id="@+id/button8"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_margin="10dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ev_d"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editText6"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:background="@drawable/mybutton"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_s"

            android:id="@+id/button9"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/snackbarPosition">
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
